--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-          <%= link_to "sample app", '#', id: "logo" %>
+          <%= link_to "sample app", root_path, id: "logo" %>
         </nav>
 
         <nav class="navbar-collapse collapse" id="sample-navbar-collapse-1">
