--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,7 +23,7 @@
       <%= f.password_field :password, class: "form-control" %>
     </div>
     <div class="form-group">
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation, class: "form-control" %>
     </div>
       <%= f.submit "Create my account", class: "col-md-6 btn btn-lg btn-primary" %>
