--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,26 +4,10 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user, {:role => "form"}) do |f| %>
-      <%= render 'shared/error_messages' %>
-
-      <%= f.label :first_name, class: "control-label" %>
-      <%= f.text_field :first_name, class: "form-control" %>
-
-      <%= f.label :last_name, class: "control-label" %>
-      <%= f.text_field :last_name, class: "form-control" %>
-
-      <%= f.label :email, class: "control-label" %>
-      <%= f.text_field :email, class: "form-control" %>
-
-      <%= f.label :password, class: "control-label" %>
-      <%= f.password_field :password, class: "form-control" %>
-
-      <%= f.label :password_confirmation, "Confirm Password", class: "control-label" %>
-      <%= f.password_field :password_confirmation, class: "form-control" %>
-
+      <%= render 'fields', f: f %>
       <%= f.submit "Save changes", class: "_col-md-6 btn btn-lg btn-primary" %>
     <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails">change</a>
+    <a href="http://gravatar.com/emails" target="_blank">change</a>
     <% end %>
   </div>
 </div>
