--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,28 +4,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user, {:role => "form"}) do |f| %>
-      <%= render 'shared/error_messages' %>
-
-    <div class="form-group">
-      <%= f.label :first_name, class: "control-label" %>
-      <%= f.text_field :first_name, class: "form-control" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :last_name, class: "control-label" %>
-      <%= f.text_field :last_name, class: "form-control" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :email, class: "control-label" %>
-      <%= f.text_field :email, class: "form-control" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :password, class: "control-label" %>
-      <%= f.password_field :password, class: "form-control" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :password_confirmation, "Confirm Password", class: "control-label" %>
-      <%= f.password_field :password_confirmation, class: "form-control" %>
-    </div>
+      <%= render 'fields', f: f %>
       <%= f.submit "Create my account", class: "col-md-6 btn btn-lg btn-primary" %>
     <% end %>
   </div>
